# web-backend

./: .gitignore  Cargo.toml  Dockerfile  configuration.json  debug.json
.github/workflows/: audit.yml  general.yml
configuration/: base.json  production.json
migrations/: 20231015130020_create_subscription_tokens_table.sql  20231018144602_create_users_table.sql  20231019130130_rename_password_column.sql  20231019133342_add_salt_to_users.sql  20231019135754_remove_salt_from_users.sql
scripts/: clear_test_db.sh  init_db.sh  query_all_db.sql
src/: application_state.rs  authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helper.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
