[package]
name = "blogb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["tcp", "server"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"

[dev-dependencies]
reqwest = "0.11.22"
