[package]
name = "blog_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "blog_backend"


[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
claims = "0.7.1"
config = { version = "0.13.3", default-features = false, features = [
    "yaml",
    "json",
] }
fake = "2.8.0"
hyper = { version = "0.14.27", features = ["tcp", "server"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.7.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate",
    "uuid",
] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4.4", features = [
    "trace",
    "request-id",
    "uuid",
    "util",
] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = ["v4"] }
validator = "0.16.1"
reqwest = { version = "0.11.22", features = ["json"] }
wiremock = "0.5.19"
serde_json = "1.0.107"

[dev-dependencies]
once_cell = "1.18.0"
